--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Biostore</title>
 <link rel="stylesheet" href="PAGES/page d'accueil/css/style.css">
 
 
