--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <title>Biostore</title>
-<link rel="stylesheet" href="PAGES/page d'accueil/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 
 </head>
 <body>
   <div id="1" class="imacc"><p>Bienvenue à <b style="color:#b68f03">Biostore</b></p>
     <div class="menu-bar">
-      <a href="PAGES/page d'accueil/html/page d'accueil.html"><img height="50px" class="img" src="PAGES/page d'accueil/img/Biostore.png" alt="logo" ></a>
+      <a href="PAGES/page d'accueil/html/page d'accueil.html"><img height="50px" class="img" src="img/Biostore.png" alt="logo" ></a>
         
          <ul>
             <li><a href=#1>Acceuil</a></li>
@@ -19,12 +19,12 @@
             <li><a href="PAGES/Contact/html/contact.html">Contact</a></li>
         </ul>
         <form action="" class="formulaire">
-          <a href="#"><img  width="22px" class="imgsearch" src="PAGES/page d'accueil/img/search.png" ></a> 
+          <a href="#"><img  width="22px" class="imgsearch" src="img/search.png" ></a> 
             <input class="champ" type="text" value=""/>
                          
         </form>
-        <a href="#" ><img height="75px" class="imgpanier" src="PAGES/page d'accueil/img/panier.png"></a>
-        <a href="PAGES/connexion/html/connexion.html" ><img height="20px" class="imglogin" src="PAGES/page d'accueil/img/login.png"></a>
+        <a href="#" ><img height="75px" class="imgpanier" src="img/panier.png"></a>
+        <a href="PAGES/connexion/html/connexion.html" ><img height="20px" class="imglogin" src="img/login.png"></a>
     </div>
   </div>
 
@@ -95,7 +95,7 @@
             </div>
         <div class="contimg">
         <div class="phraseg">Choisir les <p> produits </p> de votre <p style="color: #b68f03;">choix</p></div>
-        <div class="imgprod" ><img width="1200px" src="PAGES/page d'accueil/img/marchand.png"></div>
+        <div class="imgprod" ><img width="1200px" src="img/marchand.png"></div>
         <a href="PAGES/produits/html/produits.html" class="buttonprod"
         type="button">En savoir plus</button></a>
         </div>
@@ -115,12 +115,12 @@
             </div>
     </div>
    <footer>
-     <div class="eltfooter"><img width="100px" src="PAGES/page d'accueil/img/mail.png"><span id="spmail"> Mail <br>
+     <div class="eltfooter"><img width="100px" src="img/mail.png"><span id="spmail"> Mail <br>
       biostore@gmail.com</span></div>
-     <div class="eltfooter"><img width="120px" src="PAGES/page d'accueil/img/phone.png"><span class="speltfooter">Téléphone <br>
+     <div class="eltfooter"><img width="120px" src="img/phone.png"><span class="speltfooter">Téléphone <br>
       44100939</span></div>
-     <div class="eltfooter"><img width="110px"src="PAGES/page d'accueil/img/delivery.png"><span class="speltfooter">Livraison à domicile</span></div>
-     <div class="eltfooter"><img width="80px" src="PAGES/page d'accueil/img/pay.png"><span class="speltfooter">Paiement à la livraison</span></div>
+     <div class="eltfooter"><img width="110px"src="img/delivery.png"><span class="speltfooter">Livraison à domicile</span></div>
+     <div class="eltfooter"><img width="80px" src="img/pay.png"><span class="speltfooter">Paiement à la livraison</span></div>
    </footer>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script>
