--- a/PAGES/page d'accueil/html/page d'accueil.html
+++ b/PAGES/page d'accueil/html/page d'accueil.html
@@ -39,7 +39,7 @@
                 <ol class="carousel__viewport">
                     <li id="carousel__slide1"
                       tabindex="0"
-                      class="carousel__slide"><a href="../../offre verdatre/html/verdatre.html"><div></div></a>
+                      class="carousel__slide">
                     <div class="carousel__snapper">
                       <a href="#carousel__slide3"
                          class="carousel__prev">Go to last slide</a>
