--- a/PAGES/page d'accueil/html/page d'accueil.html
+++ b/PAGES/page d'accueil/html/page d'accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Biostore</title>
 <link rel="stylesheet" href="../css/style.css">
 
 
@@ -39,7 +39,7 @@
                 <ol class="carousel__viewport">
                     <li id="carousel__slide1"
                       tabindex="0"
-                      class="carousel__slide"><div class='img_car1'><img src=../img/verdatre.PNG></div>
+                      class="carousel__slide"><a href="../../offre verdatre/html/verdatre.html"><div></div></a>
                     <div class="carousel__snapper">
                       <a href="#carousel__slide3"
                          class="carousel__prev">Go to last slide</a>
@@ -94,7 +94,7 @@
             <div></div>
             </div>
         <div class="contimg">
-        <div class="phraseg">Choisir les <p> produits </p> de votre <p style="color: #b68f03;">choix</p></div>
+        <div class="phraseg">Choisissez les <a href="../../produits/html/produits.html"><p>produits </p></a> de votre <p style="color: #b68f03;">choix</p></div>
         <div class="imgprod" ><img width="1200px" src="../img/marchand.png"></div>
         <a href="../../produits/html/produits.html" class="buttonprod"
         type="button">En savoir plus</button></a>
