--- a/PAGES/produits/html/produits.html
+++ b/PAGES/produits/html/produits.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="viewport" content="with=device-width, initial-scale=1">
-        <title> produits </title>
+        <title> Produits </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&display=swap" rel="stylesheet">
