--- a/PAGES/s'inscrire/html/inscrire.html
+++ b/PAGES/s'inscrire/html/inscrire.html
@@ -46,8 +46,7 @@
                     <p>Confirmation du mot de passe</p>
                     <input type="password" name="" placeholder="xxxxx">
                     
-                    <input type="submit" name="" value="Créer votre compte">
-                  
+                    <a href="../../connexion/html/connexion.html"> <input type="submit" name="" value="Créer votre compte"></a>                  
 
 
                 </form>
