--- a/PAGES/s'inscrire/html/inscrire.html
+++ b/PAGES/s'inscrire/html/inscrire.html
@@ -30,7 +30,7 @@
         <div class="titre" ><h1>s'inscrire</h1></div>
         <div class="container">
             <div class="formBox">
-                <form>
+                <form action="../../connexion/html/connexion.html">
                     <p>Nom</p>
                     <input type="text" name="" placeholder="nom">
                     <p>Prénom</p>
@@ -45,9 +45,7 @@
                     <input type="password" name="" placeholder="xxxxx">
                     <p>Confirmation du mot de passe</p>
                     <input type="password" name="" placeholder="xxxxx">
-                    
-                    <a href="../../connexion/html/connexion.html"> <input type="submit" name="" value="Créer votre compte"></a>                  
-
+                    <input type="submit" name="" value="Créer votre compte">               
 
                 </form>
             </div>
