--- a/PAGES/connexion/html/connexion.html
+++ b/PAGES/connexion/html/connexion.html
@@ -30,7 +30,7 @@
         <div class="titre" ><h1>se connecter</h1></div>
         <div class="container">
             <div class="formBox">
-                <form>
+                <form action="../../page d'accueil/html/page d'accueil.html">
                     <p>Adresse Email</p>
                     <input type="text" name="" placeholder="Entrez votre adresse email">
                     
